--- a/com.webos.app.test.webrtc/index.html
+++ b/com.webos.app.test.webrtc/index.html
@@ -7,35 +7,78 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    </head>
-    <body class="enyo-unselectable">
+        <style>
+            #menu_text{
+                color:red; font-family: Arial, Helvetica, sans-serif; font-size: 40px;
+            }
+            #enter_text {
+                position: relative; left: 50px;
+                color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
+                width: 450px;
+            }
+            #apprtc_options {
+                display: none;
+                position: relative; left: 100px;
+            }
+            #site_window {
+                display: block;
+                width: 100%; height: 935px;
+            }
+            #select_label {
+                position: relative; left: 50px;
+                color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
+            }
+            #select_element {
+                position: relative; left: 100px;
+                color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
+            }
+            .codec_options {
+                color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
+            }
+            .site_names_text {
+                color:rgb(224, 95, 35); font-size: 28px; font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
         <script>
-            function displayJitsiSite() {
-                document.getElementById("menu_text").innerText = "Loading...";
-                document.getElementById("site_options").style = "display: none;";
+        </script>
+    </head>
+    <body class="enyo-unselectable" onload="handleOnLoadEvent();">
+        <script>
+            function handleOnLoadEvent() {
+                window.addEventListener('keypress', function (e) {
+                    if (e.keyCode === 13) {
+                        loadTestSite();
+                    }
+                }, false);
 
-                window.location.href = "https://meet.jit.si/";
+                document.getElementById("jitsi_radio").checked = false;
+                document.getElementById("apprtc_radio").checked = false;
+            }
+
+            function displayJitsiSite() {
+                document.getElementById("apprtc_options").style = "display: none;";
+                document.getElementById("enter_text").value = "https://meet.jit.si/";
             }
 
             function displayAppRtcOptions() {
-                document.getElementById("site_options").style = "display: none;";
-                document.getElementById("apprtc_options").style = "display: block;";
+                document.getElementById("enter_text").value = "https://appr.tc/";
+                document.getElementById("apprtc_options").style = "display: inline;";
             }
 
             function displayAppRtcSite(selectedCodec) {
-                document.getElementById("menu_text").innerText = "Loading...";
-                document.getElementById("apprtc_options").style = "display: none;";
-
-                var URL = "https://appr.tc/?vrc=" + selectedCodec;
-                window.location.href = URL;
+                var appRtcUrl = "https://appr.tc/";
+                if (selectedCodec != "Default") {
+                    appRtcUrl += "?vrc=";
+                    appRtcUrl += selectedCodec;
+                }
+                document.getElementById("enter_text").value = appRtcUrl;
             }
 
-            function handleAppRtcOptions() {
-                var selectedCodec = document.getElementById("codecOptions").value;
-                if (selectedCodec != "Select...") {
-                    displayAppRtcSite(selectedCodec);
+            function handleAppRtcOptions(selectedCodec) {
+                if (selectedCodec == "Select") {
+                    alert("Please select a codec type from options");
                 } else {
-                  alert("Please select a codec type from options");
+                    displayAppRtcSite(selectedCodec);
                 }
             }
 
@@ -47,36 +90,50 @@
                 }
             }
 
-            function displaySiteOptions() {
-                document.getElementById("apprtc_options").style = "display: none;";
-                document.getElementById("site_options").style = "display: block;";
+            function loadTestSite() {
+                var siteUrl = document.getElementById("enter_text").value;
+                if (siteUrl == "https://") {
+                    alert("Please select a site to start!");
+                    return;
+                }
+                document.getElementById("site_window").src = siteUrl;
+                return;
+
+                document.getElementById("site_window").location.replace(siteUrl);
             }
         </script>
 
-        <h1 id="menu_text" style="color:red; font-family: Arial, Helvetica, sans-serif;">Select Test Site</h1>
-        <br><br><br>
+        <text id="menu_text">Test with...</text>
+        <input id="enter_text" type="text" value="https://"/>
+        <div style="display: inline; position:relative; left:150px;">
+            <input id="enter_site" class="codec_options" type="button" value="Load" onclick="loadTestSite();"/>
+        </div>
+        <br>
         <div id="site_options" style="display: block;">
             <form>
-                <div>
-				    <input type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="jitsi">
-				    <text style="color:darkgrey; font-size: 25px; font-family: Arial, Helvetica, sans-serif;">Test with Jitsi Site</text>
+                <div style="display: inline; position:relative; left:50px; top:10px;">
+                    <input id="jitsi_radio" type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="jitsi">
+                    <text class="site_names_text">Jitsi Meet</text>
+                    <div style="display: inline; position:relative; left:50px;">
+                        <input id="apprtc_radio"  type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="apprtc"/>
+                        <text class="site_names_text">AppRTC</text>
+                    </div>
+
+                    <div id="apprtc_options">
+                        <label id="select_label" for="codecs"> Select a Codec Type : </label>
+                        <select id="select_element" onchange="handleAppRtcOptions(this.value);">
+                            <option class="codec_options">Default</option>
+                            <option class="codec_options">VP8</option>
+                            <option class="codec_options">VP9</option>
+                            <option class="codec_options">H264</option>
+                        </select>
+                    </div>
 			    </div>
-                <div>
-				    <input type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="apprtc"/>
-					<text style="color:darkgrey; font-size: 25px; font-family: Arial, Helvetica, sans-serif;">Test with AppRTC Site</text>
-				</div>
             </form>
         </div>
-
-        <div id="apprtc_options" style="display: none;">
-            <label for="codecs" style="color:darkgrey; font-size: 25px; font-family: Arial, Helvetica, sans-serif;">Select a Codec type to Recieve Data:</label>
-            <select id="codecOptions" onchange="handleAppRtcOptions();">
-                <option>Select</option>
-                <option>VP8</option>
-                <option>VP9</option>
-                <option>H264</option>
-            </select>
-            <input id="go_back" type="button" value="Go Back" onclick="displaySiteOptions();"/>
-        </div>
+        <br>
+        <iframe id="site_window" allow="geolocation; microphone; camera; midi; encrypted-media">
+            <div id="loading_msg" style="color:red;">Loading...</div>
+        </iframe>
     </body>
 </html>
