Allow fullscreen for iframe in webrtc test app
:Release Notes:
Allow fullscreen for iframe in webrtc test app needed for testing
fullscreen feature

:Detailed Notes:
Allow fullscreen for iframe in webrtc test app needed for testing
fullscreen feature of meet.jit.si site

:Testing Performed:
Tested manually in auto board and rpi4 board by adding allow
fullscreen attribute to iframe element

:QA Notes:

:Issues Addressed:
[PLAT-107603] Implement full screen feature testing with JitsiMeet

Change-Id: I21b6fe619b5af709c4e73458f15ab4e1f3bd875c
Reviewed-on: http://gpro.lge.com/c/webosose/test-apps/+/274923
Tested-by: Pankaj Maharana <pankaj.maharana@lge.com>
Reviewed-by: Commit Msg Checker <commit_msg@lge.com>
Reviewed-by: Ban Word Checker <ban_word@lge.com>
Reviewed-by: Girish Kumar M <girish.kumarm@lge.com>
Reviewed-by: Pankaj Maharana <pankaj.maharana@lge.com>

--- a/com.webos.app.test.webrtc/index.html
+++ b/com.webos.app.test.webrtc/index.html
@@ -132,7 +132,7 @@
             </form>
         </div>
         <br>
-        <iframe id="site_window" allow="geolocation; microphone; camera; midi; encrypted-media">
+        <iframe id="site_window" allow="geolocation; microphone; camera; midi; encrypted-media" allowfullscreen>
             <div id="loading_msg" style="color:red;">Loading...</div>
         </iframe>
     </body>
