Remove iframe usage from com.webos.app.test.webrtc app
:Release Notes:
Remove use of iframe in com.webos.app.test.webrtc because it may
violet security.

:Detailed Notes:
Currently we are loading webrtc test sites using iframe which uses
audio/video cources having access to camera/microphone. It is good
not to use iframe and change the window location to load the site

:Testing Performed:
Tested webrtc test cases and feature wusing both apprtc and jitsi
site options.

:QA Notes:
Test cases - QWA-3424

:Issues Addressed:
[PLAT-108697] - Change test app to handle testing more features

Change-Id: Ib9b5060e3bc2672e1ae54421671badc1c23e73d8
Reviewed-on: http://gpro.lge.com/c/webosose/test-apps/+/275081
Reviewed-by: Commit Msg Checker <commit_msg@lge.com>
Reviewed-by: Ban Word Checker <ban_word@lge.com>
Reviewed-by: Pankaj Maharana <pankaj.maharana@lge.com>
Tested-by: Pankaj Maharana <pankaj.maharana@lge.com>

--- a/com.webos.app.test.webrtc/index.html
+++ b/com.webos.app.test.webrtc/index.html
@@ -20,10 +20,6 @@
                 display: none;
                 position: relative; left: 100px;
             }
-            #site_window {
-                display: block;
-                width: 100%; height: 935px;
-            }
             #select_label {
                 position: relative; left: 50px;
                 color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
@@ -96,10 +92,7 @@
                     alert("Please select a site to start!");
                     return;
                 }
-                document.getElementById("site_window").src = siteUrl;
-                return;
-
-                document.getElementById("site_window").location.replace(siteUrl);
+                window.location.href = siteUrl;
             }
         </script>
 
@@ -132,8 +125,5 @@
             </form>
         </div>
         <br>
-        <iframe id="site_window" allow="geolocation; microphone; camera; midi; encrypted-media" allowfullscreen>
-            <div id="loading_msg" style="color:red;">Loading...</div>
-        </iframe>
     </body>
 </html>
