Use Talky instead of Jitsi Meet for multi user conferencing
:Release Notes:
Use Talky.io instead of Jitsi Meet for testing multi user
conference

:Detailed Notes:
Currently Jitsi Meet viz https://meet.jit.si/ is not suitable for
embedded platforms such as Android mobiles and webOS targets because
the content received in these devices leads to crash when users do
join/unjoin.
So we use more stable version of site https://talky.io/ to use for
multi-user testing. Hence replacing jitsi with talky.io

:Testing Performed:
1. Launch WebRtc test app (com.webos.app.test.webrtc)
2. load the https://talky.io/ test page using side loading from web
   inspector from desktop
3. Start a meeting by entering some unique ID.
4. start the meeting from some other device say laptop/smart phone
   having a google chrome browser
5. Enter the same meeting id and join the conference.
6. Verify that the playback is smooth for minimum two remote videos

:QA Notes:
Test-cases: QWA-2768, QWA-2744

:Issues Addressed:
[PLAT-109211] Change webrtc test app to use talky.io instead of jitsi
              meet

Change-Id: I93abfec3a77c02c5d9977461de271dcd5e7c200b
Reviewed-on: http://gpro.lge.com/c/webosose/test-apps/+/276087
Reviewed-by: Commit Msg Checker <commit_msg@lge.com>
Reviewed-by: Ban Word Checker <ban_word@lge.com>
Reviewed-by: Girish Kumar M <girish.kumarm@lge.com>
Reviewed-by: Praveen Kumar P <praveen.p@lge.com>
Reviewed-by: Pankaj Maharana <pankaj.maharana@lge.com>
Tested-by: Pankaj Maharana <pankaj.maharana@lge.com>

--- a/com.webos.app.test.webrtc/index.html
+++ b/com.webos.app.test.webrtc/index.html
@@ -18,14 +18,14 @@
             }
             #apprtc_options {
                 display: none;
-                position: relative; left: 100px;
+                position: relative; left: 20px;
             }
             #select_label {
-                position: relative; left: 50px;
+                position: relative; left: 10px;
                 color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
             }
             #select_element {
-                position: relative; left: 100px;
+                position: relative; left: 20px;
                 color:darkgrey; font-family: Arial, Helvetica, sans-serif; font-size: 25px;
             }
             .codec_options {
@@ -47,13 +47,14 @@
                     }
                 }, false);
 
-                document.getElementById("jitsi_radio").checked = false;
+                document.getElementById("talky_radio").checked = false;
                 document.getElementById("apprtc_radio").checked = false;
+                document.getElementById("enter_text").value = "https://";
             }
 
-            function displayJitsiSite() {
+            function displayTalkySite() {
                 document.getElementById("apprtc_options").style = "display: none;";
-                document.getElementById("enter_text").value = "https://meet.jit.si/";
+                document.getElementById("enter_text").value = "https://talky.io/";
             }
 
             function displayAppRtcOptions() {
@@ -79,8 +80,8 @@
             }
 
             function handleSiteOptions(selectedSite) {
-                if (selectedSite == "jitsi") {
-                    displayJitsiSite();
+                if (selectedSite == "talky") {
+                    displayTalkySite();
                 } else if(selectedSite == "apprtc") {
                     displayAppRtcOptions();
                 }
@@ -105,13 +106,10 @@
         <div id="site_options" style="display: block;">
             <form>
                 <div style="display: inline; position:relative; left:50px; top:10px;">
-                    <input id="jitsi_radio" type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="jitsi">
-                    <text class="site_names_text">Jitsi Meet</text>
-                    <div style="display: inline; position:relative; left:50px;">
+                    <div style="display: inline; position:relative; left:10px;">
                         <input id="apprtc_radio"  type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="apprtc"/>
                         <text class="site_names_text">AppRTC</text>
                     </div>
-
                     <div id="apprtc_options">
                         <label id="select_label" for="codecs"> Select a Codec Type : </label>
                         <select id="select_element" onchange="handleAppRtcOptions(this.value);">
@@ -121,7 +119,11 @@
                             <option class="codec_options">H264</option>
                         </select>
                     </div>
-			    </div>
+                    <div style="display: inline; position:relative; left:150px;">
+                        <input id="talky_radio" type="radio" name="browser" onclick="handleSiteOptions(this.value)" value="talky">
+                        <text class="site_names_text">Talky</text>
+                    </div>
+                </div>
             </form>
         </div>
         <br>
